--- a/starter/02-HTML-Fundamentals/index.html
+++ b/starter/02-HTML-Fundamentals/index.html
@@ -18,6 +18,8 @@
     <br />
 -->
     <h1>📘 The Code Magazine</h1>
+    <a href="blog.html">Blog</a> <a href="challenges.html">Challenges</a>
+    <a href="flexbox.html">Flexbox</a> <a href="css-grid.html">CSS-Grid</a>
     <h2>The Basic Language of the Web: HTML</h2>
     <img src="laura-jones.jpg" alt="Laura's face" width="50" heigh="50" />
     <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
