--- a/starter/02-HTML-Fundamentals/index.html
+++ b/starter/02-HTML-Fundamentals/index.html
@@ -6,73 +6,106 @@
     <title>My First Webpage</title>
   </head>
   <body>
-    <!-- not great
-    <h1>📘 The Code Magazine</h1>
-    <h2>Hello World!</h2>
-    <h3>Hello World!</h3>
-    <h4>Hello World!</h4>
-    <h5>Hello World!</h5>
-    <h6>Hello World!</h6>
-    <p>My name is Karol, and this is my very first Webpage</p>
+    <header>
+      <h1>📘 The Code Magazine</h1>
 
-    <br />
--->
-    <h1>📘 The Code Magazine</h1>
-    <a href="blog.html">Blog</a> <a href="challenges.html">Challenges</a>
-    <a href="flexbox.html">Flexbox</a> <a href="css-grid.html">CSS-Grid</a>
-    <h2>The Basic Language of the Web: HTML</h2>
-    <img src="laura-jones.jpg" alt="Laura's face" width="50" heigh="50" />
-    <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
-    <img src="post-img.jpg" alt="snippets of code" width="500" heigh="200" />
+      <nav>
+        <a href="blog.html">Blog</a>
+        <a href="challenges.html">Challenges</a>
+        <a href="flexbox.html">Flexbox</a>
+        <a href="css-grid.html">CSS-Grid</a>
+      </nav>
+    </header>
 
-    <p>
-      All modern websites and web applications are built using three
-      <em>fundamental</em>
-      technologies: HTML, CSS and JavaScript. These are the languages of the
-      web.
-    </p>
-    <p>
-      In this post, let's focus on HTML. We will learn what HTML is all about,
-      and why you too should learn it.
-    </p>
-    <h3>What is HTML?</h3>
-    <p>
-      HTML stands for <strong>H</strong>yper<strong>T</strong>ext
-      <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup language
-      that web developers use to structure and describe the content of a webpage
-      (not a programming language).
-    </p>
-    <p>
-      HTML consists of elements that describe different types of content:
-      paragraphs, links, headings, images, video, etc. Web browsers understand
-      HTML and render HTML code as websites.
-    </p>
-    <p>In HTML, each element is made up of 3 parts:</p>
-    <ol>
-      <li>The opening tag</li>
-      <li>The closing tag</li>
-      <li>The acttual element</li>
-    </ol>
-    <p>
-      You can learn more at the
-      <a href="https://www.google.pl" target="_blank">MDN Web Docs</a>
-    </p>
-    <h3>Why should you learn HTMl?</h3>
-    <p>
-      There are countless reasons for learning the fundamental langage of the
-      web. Here are 5 of them:
-    </p>
-    <ul>
-      <li>To be able to use the fundamental web dev language</li>
-      <li>
-        To hand-craft beautiful websites instead of relying on tools like
-        Wordpress or Wix
-      </li>
-      <li>To build web applications</li>
-      <li>To impress friends</li>
-      <li>To have fun!</li>
-    </ul>
+    <article>
+      <header>
+        <h2>The Basic Language of the Web: HTML</h2>
+        <img
+          src="img/laura-jones.jpg"
+          alt="Headshot of Laura Jones"
+          width="50"
+          heigh="50"
+        />
+        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <img
+          src="img/post-img.jpg"
+          alt="snippets of code"
+          width="500"
+          heigh="200"
+        />
+      </header>
 
-    <p>Hopefully you learned something new here. See you next time!</p>
+      <p>
+        All modern websites and web applications are built using three
+        <em>fundamental</em>
+        technologies: HTML, CSS and JavaScript. These are the languages of the
+        web.
+      </p>
+      <p>
+        In this post, let's focus on HTML. We will learn what HTML is all about,
+        and why you too should learn it.
+      </p>
+      <h3>What is HTML?</h3>
+      <p>
+        HTML stands for <strong>H</strong>yper<strong>T</strong>ext
+        <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup
+        language that web developers use to structure and describe the content
+        of a webpage (not a programming language).
+      </p>
+      <p>
+        HTML consists of elements that describe different types of content:
+        paragraphs, links, headings, images, video, etc. Web browsers understand
+        HTML and render HTML code as websites.
+      </p>
+      <p>In HTML, each element is made up of 3 parts:</p>
+      <ol>
+        <li>The opening tag</li>
+        <li>The closing tag</li>
+        <li>The acttual element</li>
+      </ol>
+      <p>
+        You can learn more at the
+        <a href="https://www.google.pl" target="_blank">MDN Web Docs</a>
+      </p>
+      <h3>Why should you learn HTMl?</h3>
+      <p>
+        There are countless reasons for learning the fundamental langage of the
+        web. Here are 5 of them:
+      </p>
+      <ul>
+        <li>To be able to use the fundamental web dev language</li>
+        <li>
+          To hand-craft beautiful websites instead of relying on tools like
+          Wordpress or Wix
+        </li>
+        <li>To build web applications</li>
+        <li>To impress friends</li>
+        <li>To have fun!</li>
+      </ul>
+
+      <p>Hopefully you learned something new here. See you next time!</p>
+    </article>
+    <aside>
+      <h4>Related posts</h4>
+      <ul>
+        <li>
+          <img src="img/related-1.jpg" alt="" width="70" height="70" />
+          <a href="#">How to Learn Web Development</a>
+          <p>By Jonas Schmedtmann</p>
+        </li>
+        <li>
+          <img src="img/related-2.jpg" alt="" width="70" height="70" />
+          <a href="#" width="70" height="70">The Unknown Powers of CSS</a>
+          <p>By Jim Dillon</p>
+        </li>
+        <li>
+          <img src="img/related-3.jpg" alt="" width="70" height="70" />
+          <a href="#" width="70" height="70">Why JavaScript is Awesome</a>
+          <p>By Matilda</p>
+        </li>
+      </ul>
+    </aside>
+
+    <footer>Copyright &copy; 2027 by The Code Magazine.</footer>
   </body>
 </html>
