--- a/starter/02-HTML-Fundamentals/challenges.html
+++ b/starter/02-HTML-Fundamentals/challenges.html
@@ -3,12 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challenges</title>
+    <title>Section 2 - Challenge #2</title>
   </head>
   <body>
-    <h2>Challenges</h2>
-    <a href="index.html">HOME</a> <a href="blog.html">Blog</a>
-    <a href="flexbox.html">Flexbox</a>
-    <a href="css-grid.html">CSS-Grid</a>
+    <header>
+      <h1>Converse Chuck Taylor All Star Low Top</h1>
+      <img
+        src="img/challenges.jpg"
+        alt="zoom on someone wearing converses"
+        width="350"
+      />
+    </header>
+    <article>
+      <strong>$65.00</strong>
+      <p>Free shipping</p>
+      <p>
+        Ready to dress up ort down, these classic canvas Chucks are an everyday
+        wardrobe staple.
+      </p>
+      <a href="#">More information &rarr;</a>
+    </article>
+    <aside>
+      <h2>Product details</h2>
+      <ul>
+        <li>Lightweight, durable canvas sneaker</li>
+        <li>Lightly padded footbed for added comfort</li>
+        <li>Iconic Chuck Taylor ankle patch.</li>
+      </ul>
+      <button>Add to cart</button>
+    </aside>
   </body>
 </html>
