--- a/starter/02-HTML-Fundamentals/challenges.html
+++ b/starter/02-HTML-Fundamentals/challenges.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="style.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Section 2 - Challenge #2</title>
   </head>
   <body>
     <header>
-      <h1>Converse Chuck Taylor All Star Low Top</h1>
+      <h1 class="top-site-header">Converse Chuck Taylor All Star Low Top</h1>
       <img
         src="img/challenges.jpg"
         alt="zoom on someone wearing converses"
         width="350"
       />
     </header>
-    <article>
+    <article class="bold-text">
       <strong>$65.00</strong>
       <p>Free shipping</p>
       <p>
@@ -23,7 +24,7 @@
       </p>
       <a href="#">More information &rarr;</a>
     </article>
-    <aside>
+    <aside class="bold-text">
       <h2>Product details</h2>
       <ul>
         <li>Lightweight, durable canvas sneaker</li>
