--- a/starter/02-HTML-Fundamentals/challenges.html
+++ b/starter/02-HTML-Fundamentals/challenges.html
@@ -17,7 +17,7 @@
     </header>
     <article class="bold-text">
       <strong>$65.00</strong>
-      <p>Free shipping</p>
+      <p class="shipping">Free shipping</p>
       <p>
         Ready to dress up ort down, these classic canvas Chucks are an everyday
         wardrobe staple.
