--- a/starter/02-HTML-Fundamentals/challenges.html
+++ b/starter/02-HTML-Fundamentals/challenges.html
@@ -23,6 +23,15 @@
         wardrobe staple.
       </p>
       <a href="#">More information &rarr;</a>
+      <br />
+      <div>
+        <div class="red"></div>
+        <div class="black"></div>
+        <div class="blue"></div>
+        <div class="yellow"></div>
+        <div class="brown"></div>
+        <div class="green"></div>
+      </div>
     </article>
     <aside class="bold-text">
       <h2>Product details</h2>
