--- a/starter/02-HTML-Fundamentals/challenges.html
+++ b/starter/02-HTML-Fundamentals/challenges.html
@@ -7,40 +7,49 @@
     <title>Section 2 - Challenge #2</title>
   </head>
   <body>
-    <header>
-      <h1 class="top-site-header">Converse Chuck Taylor All Star Low Top</h1>
-      <img
-        src="img/challenges.jpg"
-        alt="zoom on someone wearing converses"
-        width="350"
-      />
-    </header>
-    <article class="bold-text">
-      <strong>$65.00</strong>
-      <p class="shipping">Free shipping</p>
-      <p>
-        Ready to dress up ort down, these classic canvas Chucks are an everyday
-        wardrobe staple.
-      </p>
-      <a href="#">More information &rarr;</a>
-      <br />
-      <div>
-        <div class="red"></div>
-        <div class="black"></div>
-        <div class="blue"></div>
-        <div class="yellow"></div>
-        <div class="brown"></div>
-        <div class="green"></div>
+    <article class="product">
+      <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
+      <div class="container clearfix">
+        <img
+          src="img/challenges.jpg"
+          alt="Chuck Taylor All Star Shoe"
+          height="250"
+          width="250"
+          class="product-img"
+        />
+        <div class="product-info">
+          <p class="price"><strong>$65.00</strong></p>
+          <p class="shipping">Free shipping</p>
+          <p class="sale">Sale</p>
+
+          <p class="product-description">
+            Ready to dress up or down, these classic canvas Chucks are an
+            everyday wardrobe staple.
+          </p>
+          <a href="https://converse.com" target="_blank" class="more-info"
+            >More information &rarr;</a
+          >
+
+          <div class="colors">
+            <div class="color"></div>
+            <div class="color color-blue"></div>
+            <div class="color color-red"></div>
+            <div class="color color-yellow"></div>
+            <div class="color color-green"></div>
+            <div class="color color-brown"></div>
+          </div>
+        </div>
+
+        <div class="product-details">
+          <h3 class="details-title">Product details</h3>
+          <ul class="details-list">
+            <li>Lightweight, durable canvas sneaker</li>
+            <li>Lightly padded footbed for added comfort</li>
+            <li>Iconic Chuck Taylor ankle patch.</li>
+          </ul>
+        </div>
       </div>
+      <button class="add-cart">Add to cart</button>
     </article>
-    <aside class="bold-text">
-      <h2>Product details</h2>
-      <ul>
-        <li>Lightweight, durable canvas sneaker</li>
-        <li>Lightly padded footbed for added comfort</li>
-        <li>Iconic Chuck Taylor ankle patch.</li>
-      </ul>
-      <button>Add to cart</button>
-    </aside>
   </body>
 </html>
