--- a/starter/04-CSS-Layouts/css-grid.html
+++ b/starter/04-CSS-Layouts/css-grid.html
@@ -11,10 +11,15 @@
       }
       .el--2 {
         background-color: orangered;
+        /* grid-column: 1 / span 2; */
+        grid-column: 1 / -1;
+        grid-row: 2;
       }
       .el--3 {
         background-color: green;
         height: 150px;
+        align-self: end;
+        justify-self: end;
       }
       .el--4 {
         background-color: goldenrod;
@@ -24,22 +29,34 @@
       }
       .el--6 {
         background-color: steelblue;
+        /* grid-row: 3 / 5; */
       }
       .el--7 {
         background-color: yellow;
       }
       .el--8 {
         background-color: crimson;
+        grid-column: 2 / 3;
+        grid-row: 1/ 2;
       }
 
       .container--1 {
         /* STARTER */
+
         font-family: sans-serif;
         background-color: #ddd;
         font-size: 40px;
         margin: 40px;
 
         /* CSS GRID */
+        display: grid;
+        /* grid-template-columns: 1fr 1fr 1fr auto; */
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
+        /* height: 500px; */
+        /* grid-template-rows: 300px 200px; */
+        gap: 60px 30px;
+        display: none;
       }
 
       .container--2 {
@@ -47,12 +64,27 @@
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
+        margin: 40px;
 
-        width: 1000px;
+        width: 700px;
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+
+        /* Aligning tracks inside container:
+        distribute empty space; */
+
+        justify-content: center;
+        /* justify-content: space-between; */
+        align-content: center;
+
+        /* Aligning items inside of cells: moving items atound in the cells */
+        align-items: center;
+        justify-items: center;
       }
     </style>
   </head>
@@ -64,7 +96,7 @@
       <div class="el el--4">(4) are</div>
       <div class="el el--5">(5) amazing</div>
       <div class="el el--6">(6) languages</div>
-      <div class="el el--7">(7) to</div>
+      <!-- <div class="el el--7">(7) to</div> -->
       <div class="el el--8">(8) learn</div>
     </div>
 
