fixed picture misspell

--- a/starter/07-Omnifood-Desktop/index.html
+++ b/starter/07-Omnifood-Desktop/index.html
@@ -93,7 +93,7 @@
             </div>
           </div>
           <div class="hero-img-box">
-            <picrute>
+            <picture>
               <source srcset="img/hero.webp" type="image/webp" />
               <source srcset="img/hero-min.png" type="image/png" />
               <img
@@ -101,7 +101,7 @@
                 class="hero-img"
                 alt="Woman enjoying food, meals in storage container, and food bowls on a table"
               />
-            </picrute>
+            </picture>
           </div>
         </div>
       </section>
